[package]
name = "quantii-types"
description = "Special types used by Quantii or assosicated projects"
version = "0.2.0"
edition = "2021"
license = "GNU LGPLv3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
rand = "0.8.5"
getrandom = { version = "0.2.8", features = ["js"], optional = true}

[features]
default = []
wasm = ["getrandom"]


